Organize directory structure

--- a/template/options.html
+++ b/template/options.html
@@ -19,6 +19,6 @@
       />
     </div>
     <button id="save" style="margin-top: 20px">保存</button>
-    <script src="options.js"></script>
+    <script src="js/options.js"></script>
   </body>
 </html>
