--- a/style/contentScript.css
+++ b/style/contentScript.css
@@ -1,11 +1,28 @@
 /* 埋め込みコンテナ */
 .slack-embed-container {
+  position: relative;
   border: 1px solid #e1e1e1;
   background-color: #f9f9f9;
-  padding: 10px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 10px;
+  padding-bottom: 0px;
   margin-top: 5px;
   line-height: 1.4;
-  /* 必要に応じて他のスタイルを追加 */
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .05);
+  border-radius: 5px;
+  max-width: 600px;
+  max-height: 500px;
+  overflow-y: auto;
+}
+
+/* 埋め込みコンテナの右上のアイコン */
+.slack-embed-top-right-icon {
+  position: absolute;
+  top: 16x;
+  right: 12px;
+  width: 20px; /* アイコンの幅を調整 */
+  height: 20px; /* アイコンの高さを調整 */
 }
 
 div.slack-embed-message-content p {
