Fix to load options.js

--- a/template/options.html
+++ b/template/options.html
@@ -78,10 +78,10 @@
           placeholder="yourcompany"
         />
         <p>e.g. https://{ yourcompany }.backlog.jp/</p>
-        <button type="submit">Save</button>
+        <button type="submit" id="save">Save</button>
         <div class="message" id="message"></div>
       </form>
     </div>
-    <script src="options.js"></script>
+    <script src="../js/options.js"></script>
   </body>
 </html>
